created hyperlinks in all files

--- a/client1.html
+++ b/client1.html
@@ -11,8 +11,8 @@
 <p>Gender: Cyborg</p>
 <p>Pets:</p>
 	<ul>
-		<li>Spot</li>
-		<li>Clifford</li>
+		<li><a href="./pet1.html">Spot</a></li>
+		<li><a href="./pet2.html">Clifford</a></li>
 	</ul>
 
 
