--- a/client2.html
+++ b/client2.html
@@ -11,7 +11,7 @@
 <p>Gender: Fugitive</p>
 <p>Pets:</p>
 	<ul>
-		<li>The Cat in the Hat</li>
+		<li><a href="./pet3.html">The Cat in the Hat</a></li>
 	</ul>
 
 
