--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
 <body>
 
 <h1>Welcome to HappiTails!</h1>
-<h2>We are a shelter for cats, dogs, and all kinds of pets with tails.</h2>
+<h2><em>where tails are always wagging</em></h2>
+
+<p>We are a shelter for cats, dogs, and all kinds of pets with tails. Come join our family!</p>
 
 <h3>Here are just some of our clients:</h3>
 
 <ul>
-	<li>Jacqui Maher</li>
-	<li>Jeremy Bowers</li>
-	<li>Annabel Sun</li>
+	<li><a href="./client1.html">Jacqui Maher</a></li>
+	<li><a href="./client2.html">Jeremy Bowers</a></li>
 </ul>
 
 <h3>And here are some of our pets:</h3>
 
 <ul>
-	<li>Spot</li>
-	<li>Clifford</li>
-	<li>The Cat in the Hat</li>
+	<li><a href="./pet1.html">Spot</a></li>
+	<li><a href="./pet2.html">Clifford</a></li>
+	<li><a href="./pet3.html">The Cat in the Hat</a></li>
 </ul>
 
 
