added links to homepage

--- a/pet2.html
+++ b/pet2.html
@@ -9,7 +9,7 @@
 <img src="http://1.bp.blogspot.com/-Dy-f1NoQIhY/UKBFdEoxJmI/AAAAAAAAN-Q/4KfK2eZRrXM/s1600/clifford-red-dog.png" alt="picture of Clifford the Big Red Dog">
 <p>Breed: Big Red Dog</p>
 <p>Age: 3</p>
-<p>Gender: Female</p>
+<p>Gender: Woof</p>
 <p>Favorite Toys:</p>
 	<ul>
 		<li>bones</li>
