--- a/client1.html
+++ b/client1.html
@@ -5,16 +5,17 @@
 </head>
 <body>
 
-<h2>Jacqui Maher</h2>
-<img src="http://photos3.meetupstatic.com/photos/member/c/b/6/a/member_2752074.jpeg" alt="picture of Jacqui Maher">
-<p>Age: 39</p>
-<p>Gender: Cyborg</p>
-<p>Pets:</p>
-	<ul>
-		<li><a href="./pet1.html">Spot</a></li>
-		<li><a href="./pet2.html">Clifford</a></li>
-	</ul>
+	<h2>Jacqui Maher</h2>
+		<img src="http://photos3.meetupstatic.com/photos/member/c/b/6/a/member_2752074.jpeg" alt="picture of Jacqui Maher">
+		<p>Age: 39</p>
+		<p>Gender: Cyborg</p>
+		<p>Pets:</p>
+			<ul>
+				<li><a href="./pet1.html">Spot</a></li>
+				<li><a href="./pet2.html">Clifford</a></li>
+			</ul>
 
+	<p><a href="./index.html">Back to HappiTails Home</a></p>
 
 </body>
 </html>
