--- a/client2.html
+++ b/client2.html
@@ -5,15 +5,16 @@
 </head>
 <body>
 
-<h2>Jeremy Bowers</h2>
-<img src="http://thumbs.mugshots.com/gallery/images/2/7f/25/Jeremy-P-Bowers_mugshot.223x223.jpg" alt="mugshot of Jeremy Bowers">
-<p>Age: 28</p>
-<p>Gender: Fugitive</p>
-<p>Pets:</p>
-	<ul>
-		<li><a href="./pet3.html">The Cat in the Hat</a></li>
-	</ul>
+	<h2>Jeremy Bowers</h2>
+		<img src="http://thumbs.mugshots.com/gallery/images/2/7f/25/Jeremy-P-Bowers_mugshot.223x223.jpg" alt="mugshot of Jeremy Bowers">
+		<p>Age: 28</p>
+		<p>Gender: Fugitive</p>
+		<p>Pets:</p>
+			<ul>
+				<li><a href="./pet3.html">The Cat in the Hat</a></li>
+			</ul>
 
+<p><a href="./index.html">Back to HappiTails Home</a></p>
 
 </body>
 </html>
