--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
 </head>
 <body>
 
-<h1>Welcome to HappiTails!</h1>
-<h2><em>where tails are always wagging</em></h2>
+	<h1>Welcome to HappiTails!</h1>
+	<h2><em>where tails are always wagging</em></h2>
 
-<p>We are a shelter for cats, dogs, and all kinds of pets with tails. Come join our family!</p>
+	<img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-frc3/c0.164.851.315/p851x315/476663_313446368739404_491425814_o.jpg">
 
-<h3>Here are just some of our clients:</h3>
+	<p>We are a shelter for cats, dogs, and all kinds of pets with tails. Come join our family!</p>
 
-<ul>
-	<li><a href="./client1.html">Jacqui Maher</a></li>
-	<li><a href="./client2.html">Jeremy Bowers</a></li>
-</ul>
+	<h3>Here are just some of our clients:</h3>
 
-<h3>And here are some of our pets:</h3>
+		<ul>
+			<li><a href="./client1.html">Jacqui Maher</a></li>
+			<li><a href="./client2.html">Jeremy Bowers</a></li>
+		</ul>
 
-<ul>
-	<li><a href="./pet1.html">Spot</a></li>
-	<li><a href="./pet2.html">Clifford</a></li>
-	<li><a href="./pet3.html">The Cat in the Hat</a></li>
-</ul>
+	<h3>And here are some of our pets:</h3>
 
+		<ul>
+			<li><a href="./pet1.html">Spot</a></li>
+			<li><a href="./pet2.html">Clifford</a></li>
+			<li><a href="./pet3.html">The Cat in the Hat</a></li>
+		</ul>
 
 </body>
 </html>
