--- a/pet1.html
+++ b/pet1.html
@@ -5,16 +5,18 @@
 </head>
 <body>
 
-<h2>Spot</h2>
-<img src="http://memecrunch.com/meme/16V4G/spot-check-ostrich/image.png" alt="picture of Spot">
-<p>Breed: Ostrich</p>
-<p>Age: 8</p>
-<p>Gender: Male</p>
-<p>Favorite Toys:</p>
-	<ul>
-		<li>sand</li>
-		<li>YOUR FACE</li>
-	</ul>
+	<h2>Spot</h2>
+		<img src="http://memecrunch.com/meme/16V4G/spot-check-ostrich/image.png" alt="picture of Spot">
+		<p>Breed: Ostrich</p>
+		<p>Age: 8</p>
+		<p>Gender: Male</p>
+		<p>Favorite Toys:</p>
+			<ul>
+				<li>sand</li>
+				<li>YOUR FACE</li>
+			</ul>
+
+	<p><a href="./index.html">Back to HappiTails Home</a></p>
 
 </body>
 </html>
