--- a/pet2.html
+++ b/pet2.html
@@ -5,16 +5,18 @@
 </head>
 <body>
 
-<h2>Clifford</h2>
-<img src="http://1.bp.blogspot.com/-Dy-f1NoQIhY/UKBFdEoxJmI/AAAAAAAAN-Q/4KfK2eZRrXM/s1600/clifford-red-dog.png" alt="picture of Clifford the Big Red Dog">
-<p>Breed: Big Red Dog</p>
-<p>Age: 3</p>
-<p>Gender: Woof</p>
-<p>Favorite Toys:</p>
-	<ul>
-		<li>bones</li>
-		<li>holes in the ground</li>
-	</ul>
+	<h2>Clifford</h2>
+		<img src="http://1.bp.blogspot.com/-Dy-f1NoQIhY/UKBFdEoxJmI/AAAAAAAAN-Q/4KfK2eZRrXM/s1600/clifford-red-dog.png" alt="picture of Clifford the Big Red Dog">
+		<p>Breed: Big Red Dog</p>
+		<p>Age: 3</p>
+		<p>Gender: Woof</p>
+		<p>Favorite Toys:</p>
+			<ul>
+				<li>bones</li>
+				<li>holes in the ground</li>
+			</ul>
+
+	<p><a href="./index.html">Back to HappiTails Home</a></p>
 
 </body>
 </html>
